# zapper

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  install-conda.sh
backend/: README.md
backend/lib/: .gitignore  Cargo.toml  Makefile  README.md
backend/lib/src/: common.rs  constants.rs  lib.rs
backend/lib/src/crypto/: elgamal_ext.rs  mod.rs  poseidon.rs  sparse_merkle_tree.rs
backend/lib/src/infrastructure/: circuit.rs  derivations.rs  identities.rs  mod.rs  params.rs  processor.rs  record.rs  runtime.rs
backend/py/: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
backend/py/src/: lib.rs
docker/: .dockerignore  .gitignore  Dockerfile  Makefile  anonymize.sh
frontend/: .gitignore  README.md  run-eval.sh  setup.py
frontend/eval/: analyze_results.py  run.py
frontend/eval/scenarios/: auction.py  coin.py  dex_offer.py  heritable_wallet.py  reviews.py  train_ticket.py  working_hours.py
frontend/eval/sri_plot_helper/: __init__.py
frontend/logging_plus/: configuration.py  default_logging.py  formatters.py  handlers.py  log_directory.py
frontend/tests/assembly/: test_assembly.py  test_instruction.py  test_linking.py
frontend/tests/compiler/: test_compiler.py
frontend/tests/examples/: contract_coin.py  contract_dex.py  contract_example_1.py  contract_example_2.py  contract_example_3.py  contract_example_4.py
frontend/tests/integration/: test_compile_to_inline.py  test_end_to_end.py
frontend/tests/lang/: debug_event_observer.py  test_contract.py  test_types.py
frontend/tests/ledger/: test_ledger.py
frontend/tests/runtime/: test_runtime.py
frontend/tests/utils/: test_general.py  test_inspection.py
frontend/zapper/: zapper_logging.py
frontend/zapper/assembly/: README.md  assembly_class.py  assembly_storage.py  binary_operations.py  fields.py  functions.py  references.py  security.py  types.py  values.py
frontend/zapper/compiler/: assembly_emitter_observer.py  compiler.py  instruction_builder.py  register_allocation.py
frontend/zapper/lang/: contract.py  event_observer.py  field.py  (+3 more)
microbench/: analyze.py  constants-template.rs  run_microbench.py
microbench/runner/: Cargo.toml
microbench/sri_plot_helper/: __init__.py
(+26 files in other folders)
