[package]
name = "zapper-backend-lib"
version = "0.1.0"
edition = "2018"

[dependencies]
ark-ff = { version = "^0.3.0", features = ["asm"] }
ark-ec = { version = "^0.3.0" }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = [ "r1cs" ] }
ark-bls12-381 = { version = "^0.3.0" }
ark-std = { version = "^0.3.0" }
ark-relations = { version = "^0.3.0"  }
ark-r1cs-std = { version = "^0.3.0" }
ark-snark = { version = "^0.3.0" }
ark-gm17 = { version = "^0.3.0", features = [ "r1cs" ] }
ark-serialize = { version = "^0.3.0" }
ark-crypto-primitives = { version = "^0.3.0", features = [ "r1cs" ] }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge", rev = "51d6fc9aac1fa69f44a04839202b5de828584ed8" }
blake2 = { version = "0.9.2" }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.2" }
num-bigint = { version = "0.4.0", default-features = false }
hex = "0.4"
log4rs = "1.0"
log = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
overflow-checks = false

[profile.dev]
opt-level = 0
panic = 'abort'
debug = true
debug-assertions = true

[features]
tiny = []  # sets constants to small values (useful for cheap debugging and testing)
circuit-trace = []  # expensive tracing of circuit evaluation and satisfiability